# 7kglobal-bot

./: Cargo.toml  README.md  config.json  emoji_exceptions.json  member_role_cache.json
src/: commands.rs  config.rs  emoji_exceptions.rs  game_api.rs  lib.rs  main.rs  request_handler.rs  user.rs  verification.rs
src/commands/: config_command.rs  list_command.rs  mod.rs  remove_user_command.rs  verify_command.rs
