[package]
name = "sevenkey-global-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
celes = "2.6.0"
emojis = "0.6.4"
serde = "1.0"
serde_json = "1.0"
serenity = "0.12.4"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.11.1"

[lib]
path = "src/lib.rs"
